--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ layout: default
 {% include navigation.html %}
 {% include header.html %}
 {% include single-main-grid.html %}
+{% include footer.html %}
 <!-- you can add html here in order to layout all components -->
 
 
