FIX: PR grid component changes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 <!-- this is how we include html partials -->
 {% include navigation.html %}
 {% include header.html %}
-
+{% include single-main-grid.html %}
 <!-- you can add html here in order to layout all components -->
 
 
