init: main grid layout

--- a/index.html
+++ b/index.html
@@ -3,16 +3,28 @@
 # To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 
 layout: default
+
+card:
+  - position: first officer
+    image: assets/homepage-first-officer-2.png
+  - position: rotor transition program
+    image: assets/homepage-rotor-transition-pilot.png
+  - position: mechanics
+    image:  assets/homepage-mechanics.png
+  - position: flight attendants
+    image: assets/homepage-flight-attendant.png
+  - position: cadets
+    image: assets/homepage-cadets.png
+  - position: more airline careers
+    image: assets/homepage-more-careers.png
 ---
 
 <!-- this is how we include html partials -->
 {% include navigation.html %}
 {% include header.html %}
-{% include single-main-grid.html %}
+{% include main-grid.html %}
 {% include footer.html %}
 <!-- you can add html here in order to layout all components -->
-
-
 
 
 
