init: blockquote mobile layout

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ card:
 {% include navigation.html %}
 {% include header.html %}
 {% include main-grid.html %}
+{% include blockquote-section.html %}
 {% include footer.html %}
 <!-- you can add html here in order to layout all components -->
 
