init: html markup for news section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ card:
 {% include header.html %}
 {% include main-grid.html %}
 {% include blockquote-section.html %}
+{% include news-section.html %}
 {% include footer.html %}
 <!-- you can add html here in order to layout all components -->
 
