wip: finalize copyright section and add media queries

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ card:
 {% include main-grid.html %}
 {% include blockquote-section.html %}
 {% include news-section.html %}
+{% include american-copyright-section.html %}
 {% include footer.html %}
 <!-- you can add html here in order to layout all components -->
 
