fix: refactor file/folder structure,  markup structure, change navigation inside header and hero inside a section

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ card:
 ---
 
 <!-- this is how we include html partials -->
-{% include navigation.html %}
 {% include header.html %}
+{% include hero-section.html %}
 {% include main-grid.html %}
 {% include blockquote-section.html %}
 {% include news-section.html %}
